--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="dangine/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/lwjgl_util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
