Switched game drawing from old push/pop matrix stack to individually calculating matrixies, then drawing from a sorted list of RenderData. This will let us have depth and lights. Disabled GL_DEPTH_TEST.

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="lib/gdx.jar"/>
+	<classpathentry kind="lib" path="lib/gdx-natives.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
